avoid touch scrolldown refresh on mobile devices

--- a/src/View/Style/App.css
+++ b/src/View/Style/App.css
@@ -24,5 +24,5 @@ button {
 }
 
 html, body {
-    overscroll-behavior-x: none;
+    overscroll-behavior: none;
 }
